# Implicit_Swept_Volume_Planner

./: .gitignore  README.md  claude-progress.json  feature-list.json  init.sh
esv_planner/: CMakeLists.txt  benchmark_metrics.csv  benchmark_summary.md  benchmark_trajectories.csv  package.xml  traj_diff2.txt
esv_planner/artifacts/harness_logs/: 20260220_210640_state.json
esv_planner/config/: demo.rviz  planner.yaml
esv_planner/include/esv_planner/: body_frame_sdf.h  collision_checker.h  common.h  continuous_collision_evaluator.h  continuous_feasibility.h  continuous_feasibility_checker.h  continuous_svsdf_evaluator.h  footprint_model.h  geometry_map.h  grid_map.h  grid_obstacle_source.h  hybrid_astar.h  lmbm_solver.h  local_obstacle_cache.h  minco_parameterization.h  occupancy_grid_bridge.h  paper_backend.h  paper_planner.h  path_sparsifier.h  planner_trigger_state.h  se2_sequence_generator.h  se2_svsdf_solver.h  strict_frontend.h  svsdf_evaluator.h  svsdf_runtime.h  swept_astar.h  topology_planner.h  trajectory_optimizer.h  trajectory_sampling.h  true_svsdf_penalty.h  unified_continuous_evaluator.h
esv_planner/include/esv_planner/core/: geometry_map.h  math_utils.h  trajectory_sampling.h  trajectory_utils.h
esv_planner/include/esv_planner/env/: body_frame_sdf.h  collision_checker.h  footprint_model.h  grid_map.h  grid_obstacle_source.h  polygon_sdf.h
esv_planner/include/esv_planner/framework/: recovery_manager.h  svsdf_runtime.h
esv_planner/include/esv_planner/global_search/: hybrid_astar.h  swept_astar.h  topology_planner.h
esv_planner/include/map_manager/: GridMap3D.h
esv_planner/include/planner_algorithm/: back_end_optimizer.hpp  front_end_Astar.hpp  mid_end.hpp
esv_planner/include/swept_volume/: sw_calculate.hpp  sw_manager.hpp
esv_planner/include/utils/: Shape.hpp  lbfgs.hpp
esv_planner/launch/: demo.launch  planner.launch
esv_planner/maps/: map.yaml  maze.pgm  office.pgm  office.yaml
esv_planner/src/: benchmark_planner.cpp  body_frame_sdf.cpp  collision_checker.cpp  continuous_feasibility.cpp  continuous_svsdf_evaluator.cpp  esv_planner_node.cpp  footprint_model.cpp  grid_map.cpp  grid_obstacle_source.cpp  hybrid_astar.cpp  lmbm_solver.cpp  local_obstacle_cache.cpp  minco_parameterization.cpp  occupancy_grid_bridge.cpp  paper_backend.cpp  paper_planner.cpp  path_sparsifier.cpp  polygon_sdf.cpp  se2_sequence_generator.cpp  se2_svsdf_solver.cpp  strict_frontend.cpp  svsdf_evaluator.cpp  svsdf_runtime.cpp  swept_astar.cpp  test_body_frame_sdf.cpp  test_esv_fixed_case_regression.cpp  test_esv_pipeline_maze.cpp  test_geometry_map.cpp  test_grid_map_esdf.cpp  test_grid_map_inflated_esdf.cpp  test_hybrid_astar_maze_cases.cpp  test_hybrid_astar_recovery.cpp  test_motion_sequence.cpp  test_optimizer_r2_paper_semantics.cpp  test_optimizer_se2_fixed_high_segments.cpp  test_optimizer_se2_fixed_large_high_segment.cpp  test_optimizer_se2_maze_t_high_segment.cpp  test_optimizer_se2_time_refinement.cpp  test_optimizer_select_best_clearance.cpp  test_planner.cpp  (+10 more)
esv_planner/src/core/: math_utils.cpp  trajectory_utils.cpp
esv_planner/src/env/: body_frame_sdf.cpp  collision_checker.cpp  footprint_model.cpp  grid_map.cpp  grid_obstacle_source.cpp  polygon_sdf.cpp
esv_planner/src/env/implicit_svsdf_map/: grid_map_3d.cpp  (+3 more)
esv_planner/src/framework/: recovery_manager_bottleneck.cpp  recovery_manager_tail.cpp  svsdf_runtime.cpp  svsdf_runtime_evaluate.cpp  svsdf_runtime_plan.cpp
esv_planner/src/global_search/: hybrid_astar.cpp  swept_astar.cpp  topology_planner.cpp
esv_planner/src/implicit_svsdf/: debug_publisher.cpp  grid_map_3d.cpp  pcs_map_manager.cpp  svsdf_backend_optimizer.cpp  svsdf_midend.cpp
esv_planner/src/ros_interface/: esv_planner_node.cpp  occupancy_grid_bridge.cpp  ros_visualizer.cpp
esv_planner/test/: bottleneck_local_rebuild_case.zsh  coarse_to_fine_stages_test.cpp  newmap_multihotspot_case_check.zsh  paper_pipeline_smoke.py  paper_pipeline_smoke.test  planner_geometry_test.cpp  strict_runtime_components.test  strict_runtime_components_test.cpp  strict_svsdf_demo_params.yaml  strict_svsdf_demo_smoke.test  success_case_check.zsh  tail_trajectory_regression.py  test_body_frame_sdf.cpp  test_continuous_svsdf_evaluator.cpp  test_esv_fixed_case_regression.cpp  test_esv_pipeline_maze.cpp  test_esv_second_case_regression.cpp  test_geometry_map.cpp  test_grid_continuous_feasibility_default_backend.cpp  test_grid_continuous_feasibility_injection.cpp  test_low_high_semantics.cpp  test_minco_parameterization.cpp  test_motion_sequence.cpp  test_optimizer_r2_continuous_polynomial.cpp  test_optimizer_se2_continuous_polynomial.cpp  test_optimizer_se2_maze_l_path1_high_segment.cpp  test_planner.cpp  test_planner_trigger_state.cpp  test_sequence_feasibility_injection.cpp  test_sequence_finalize_minimality.cpp  test_svsdf_phase_consistency.cpp  test_third_party_dependency_probe.cpp  test_topology_body_push.cpp  test_topology_body_push_no_search.cpp  test_topology_fixed_case_clearance.cpp  test_topology_shortcut.cpp  test_trajectory_spatial_sampling.cpp  test_unified_continuous_evaluator.cpp  test_unified_continuous_evaluator_geometry.cpp  trajectory_generation.test  (+2 more)
esv_planner/tools/: generate_maze_map.py  long_running_harness.py  plot_benchmark.py  run_benchmark.sh  summarize_benchmark.py
isweep_planner/: CMakeLists.txt  package.xml
isweep_planner/config/: demo.rviz  planner.yaml
isweep_planner/launch/: demo.launch  planner.launch
isweep_planner/maps/: map_clean_nav.yaml  office.pgm
isweep_planner/src/core/: math_utils.cpp  trajectory_utils.cpp
isweep_planner/src/env/: body_frame_sdf.cpp  collision_checker.cpp  footprint_model.cpp  grid_map.cpp  grid_obstacle_source.cpp  polygon_sdf.cpp
isweep_planner/src/framework/: recovery_manager_bottleneck.cpp  recovery_manager_tail.cpp  svsdf_runtime.cpp  svsdf_runtime_evaluate.cpp  svsdf_runtime_plan.cpp
isweep_planner/src/global_search/: hybrid_astar.cpp  swept_astar.cpp  topology_planner.cpp
isweep_planner/src/ros_interface/: isweep_planner_node.cpp  occupancy_grid_bridge.cpp  ros_visualizer.cpp
(+89 files in other folders)
