<?xml version="1.0"?>
<package format="2">
  <name>esv_planner</name>
  <version>0.1.0</version>
  <description>Efficient Swept Volume-Based Trajectory Generation for Arbitrary-Shaped Ground Robot Navigation</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>eigen</build_depend>
</package>
