<?xml version="1.0"?>
<package format="2">
  <name>esv_planner</name>
  <version>0.2.0</version>
  <description>Strict Implicit-SVSDF planner reproduction for arbitrary-shaped ground robot navigation.</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <test_depend>map_server</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rospy</test_depend>
</package>
